[tool.poetry]
name = "moz-image"
version = "0.1.0"
description = "mozkzki's image library."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-image"
repository = "https://github.com/mozkzki/moz-image"
documentation = "https://github.com/mozkzki/moz-image/wiki"
keywords = ['image', 'GYAZO', 'download', 'resize']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.19.1"
Pillow = "^8.4.0"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
mypy = "0.910"
pytest = "6.2.5"
black = "21.10b0"
pytest-cov = "3.0.0"
coverage = "6.1.1"
isort = "5.10.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
