[tool.poetry]
name = "moz-image"
version = "0.1.0"
description = "mozkzki's image library."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-image"
repository = "https://github.com/mozkzki/moz-image"
documentation = "https://github.com/mozkzki/moz-image/wiki"
keywords = ['image', 'GYAZO', 'download', 'resize']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "0.21.1"
Pillow = "9.4.0"
requests = "2.28.2"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.0.1"
pytest = "7.2.1"
black = "23.1.0"
pytest-cov = "4.0.0"
coverage = "7.2.0"
isort = "5.11.5"
Sphinx = "4.3.2"
sphinx-rtd-theme = "1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
