[tool.poetry]
name = "moz-image"
version = "0.1.0"
description = "mozkzki's image library."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-image"
repository = "https://github.com/mozkzki/moz-image"
documentation = "https://github.com/mozkzki/moz-image/wiki"
keywords = ['image', 'GYAZO', 'download', 'resize']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "0.21.1"
Pillow = "9.5.0"
requests = "2.31.0"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.9.0"
pytest = "7.4.4"
black = "23.12.1"
pytest-cov = "4.1.0"
coverage = "7.4.3"
isort = "5.13.2"
sphinx = "6.2.1"
sphinx-rtd-theme = "1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
